kubernetes-manifestfiles2/virtualServiceBackend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gestionetudiant-backend
spec:
  hosts:
  - "*"
  gateways:
  - gestionetudiant-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: service-etudiant.default.svc.cluster.local
        port:
          number: 8080
