kubernetes-manifestfiles2/virtualServiceFront.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gestionetudiant-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - gestionetudiant-gateway
  http:
  - name: frontend-vs
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-etudiantfront
        port:
          number: 80
